frontend/files/styles/main.scss
/* ... */
#sharePopupFilename, #sharePopupUploadDate, #sharePopupSize {
	display: block;
}

#sharePopupFilename {
	font-weight: bold;
}

#sharePopupUploadDate, #sharePopupSize {
	color: lightgray;
}

.shareDownloadLimitSelector, .shareValidityPeriodSelector, .inviteValidityPeriodSelector {
	width: 60px;
	height: 60px;
}

#inviteNameField, #inviteMessageField, .shareDownloadLimitField, .shareValidityPeriodField, .inviteValidityPeriodField, .inviteMaxUploadSizeField {
	text-align: center;
	padding: 0;
	font-weight: bold;
}

.shareActiveDownloadLimitSelector, .shareActiveDownloadLimitSelector:hover,
.shareActiveValidityPeriodSelector, .shareActiveValidityPeriodSelector:hover, .inviteActiveValidityPeriodSelector, .inviteActiveValidityPeriodSelector:hover, .inviteActiveMaxUploadSizeSelector, .inviteActiveMaxUploadSizeSelector:hover {
	background-color: var(--selectedInputColor);
	border-color: lightslategray;
}

.checkboxesContainer {
	text-align: left;
	width: 75%;
	padding-left: 20%;
	box-sizing: border-box;
}

@media screen and (max-width: 400px) {
	.checkboxesContainer {
		padding-left: 5%;
	}
}

.checkboxLabel {
	vertical-align: middle;
	user-select: none;
	font-weight: bold;
	transition: color .3s ease;
}

/* Basic styling */
input[type=checkbox] {
	width: 25px;
	height: 25px;
	vertical-align: middle;
	appearance: none;
	background: none;
	border: 0;
	outline: 0;
	flex-grow: 0;
}
  
/* Pseudo element for check styling */
input[type=checkbox]::before {
	content: "";
	display: block;
	width: inherit;
	height: inherit;
	border-radius: var(--defaultBorderRadius);
	border: 2px solid #24272b;
	background-color: var(--inputColor);
	transition: background-color .3s ease, border-color .3s ease;
}

input[type=checkbox]:checked::before {
	background-color: var(--selectedInputColor);
	border-color: lightslategray;
}

/* Gray out labeled if not checked (if checlox is before) */
input[type=checkbox]:not(:checked) ~ .checkboxLabel {
	color: #757575;
}


/* Disabled checkbox. Overrides user agent stylesheet trash to make nothing visible */
input[type=checkbox]:disabled {
	appearance: none;
	background: none;
	border: 0;
	outline: 0;
	flex-grow: 0;

	/* Next sibling selector to gray out checkbox */
	& ~ .checkboxLabel {
		color: rgb(84, 95, 107);
		cursor: not-allowed;
	}
}

/* Disabled pseudo */
input[type=checkbox]:disabled::before {
	background-color:  #111314;
	border-color: rgb(45, 51, 58);
	cursor: not-allowed;
}

#createShareLinkBtn, #createInviteLinkBtn {
	background-color: var(--selectedInputColor);
	display: block;
	margin-left: auto;
	margin-right: auto;
	margin-top: 25px;
}

#createShareLinkBtn:hover, #createInviteLinkBtn:hover {
	transform: scale(1.05);
}

#createShareLinkBtn:active, #createInviteLinkBtn:active {
	background-color: #0f202f;
}

#shareLinkField, #inviteLinkField {
	width: 80%;
	font-size: 15px;
	margin-top: 15px;
}

#inviteNameField {
	height: 50px;
	width: 100px;
	margin-right: 5px;
}

.inviteMaxUploadSizeSelector {
	height: 60px;
	width: 90px;
}

#inviteMessageField {
	height: 50px;
	width: 200px;
	text-align: left;
	padding: 10px;
}

#inviteMessageField::placeholder {
	text-align: center;
}

.fieldError {
	border: 2px solid darkred;
}

#inviteButton {
	
}

#buttonDock {
	margin-bottom: 25px;
}

#whats-this-hint {
	position: absolute;
	right: 20px;
	top: 20px;
}

a {
	color: #8ab4f8;
    text-decoration: none;

	&:hover, &:active {
		text-decoration: underline;
	}

	&:active {
		color: #6d8ec4;
	}
}

#stayLoggedInCheckbox::before {
	margin-left: 145px;
}

#stayLoggedInCheckboxContainer {
	margin-left: 15px;
}

#forceDownloadCheckboxContainer {
	margin-top: 8px;
	margin-left: 35px;
}

#loginCard {
	display: none;
}

#signupLink {
	display: inline-block;
	margin-top: 20px;
	margin-bottom: 7px;
	font-size: smaller;
	cursor: pointer;
}

#signupUsernameField, #signupPasswordField2, #signupMsgField {
	margin-bottom: 20px;
}

#signupRequestBtn {
	margin: 0 auto;
    display: block;
	padding: 15px;
	cursor: pointer;
}

.notification {
	transform: translate(-50%, -200%);
	position: fixed;
	padding: 10px;
	width: 300px;
	height: 75px;
	border-radius: var(--defaultBorderRadius);
	overflow: hidden;
	z-index: 150;
	background-color: var(--sectionCardColor);
	left: 50%;
	top: 20px;
	
	border: 2px solid gray;
	box-shadow: 0px 0px 20px 20px rgba(0,0,0, 0.4);

	transition: transform .15s ease-out;

	

	& > span { /* The actual text of the notification */
		font-size: 16px;
		position: relative;
		display: block;
		top: 50%;
		transform: translateY(-50%);
		cursor: default; /* remove select cursor on text */
	}


	&.shown {
		transform: translate(-50%, 0);	

		&:hover {
			transform: translate(-50%, 0) scale(1.02);
		}
	}

	&.error {
		background-color: #320000;
		border-color: #4e0000;
	}
}

#signupMsgField {
	height: 61px;
	font-weight: normal;
}

@media screen and (max-width: 810px) {
	.filesListItem {
		gap: 0;
		column-gap: 10px;
		padding: 8px 8px 8px;

		/* make filename take up whole row */
		> .filesListItemComponentLeft {
			width: 100%;
		}

		/* cozy up the size and date of file*/
		> .filesListItemTextComponent {
			width: auto;
			font-size: 12px;
		}
	}

	/* reduce wasted space */
	#filePickerDropArea, #buttonDock {
		margin-bottom: 10px;
	}

	/* push the delete, share, download icons to the right */
	.deleteIcon {
		margin-left: auto;
	}

	#refreshButton {
		margin-right: 10px;
		margin-top: -10px;
	}

	#logoutButton {
		margin-left: 10px;
		margin-top: -10px;
	}
}

